# tweety-rs

./: Cargo.toml  README.md  TODO.md
src/: lib.rs
src/api/: bookmark.rs  client.rs  direct_messages.rs  error.rs  followers.rs  following.rs  hide_replies.rs  like.rs  mentions.rs  mod.rs  retweets.rs  search.rs  tweet.rs  uploads.rs  user.rs
src/types/: mod.rs  tweet.rs  types.rs  user.rs
tests/: intergration_test.rs
